[gd_scene load_steps=6 format=3 uid="uid://b075d85nmca7s"]

[ext_resource type="Script" path="res://scripts/utilities/user_interface.gd" id="1_2nhxu"]
[ext_resource type="Texture2D" uid="uid://dishehhur7io2" path="res://assets/white_dot.png" id="1_v2w42"]
[ext_resource type="Texture2D" uid="uid://b1oqk2tqilbw" path="res://assets/crosshair.svg" id="3_etq2v"]
[ext_resource type="PackedScene" uid="uid://dt6i863shdkev" path="res://scenes/utilities/NoticeTriangle.tscn" id="4_rjkcx"]
[ext_resource type="Texture2D" uid="uid://b80p5j73bgwl1" path="res://assets/square.png" id="5_1vwdi"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_2nhxu")

[node name="Crosshair" type="Sprite2D" parent="."]
position = Vector2(37, 58)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_etq2v")

[node name="LockOn" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 10.0
offset_bottom = 10.0
texture = ExtResource("1_v2w42")
expand_mode = 1

[node name="DebugLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 116.0
offset_bottom = 47.0
text = "DebugLabel"

[node name="NoticeTriangles" type="Node2D" parent="."]

[node name="NoticeTriangle" parent="NoticeTriangles" instance=ExtResource("4_rjkcx")]

[node name="HealthBars" type="Node2D" parent="."]

[node name="WellbeingWidgets" type="Node2D" parent="."]
position = Vector2(146, 66)

[node name="WellbeingWidget" type="Node2D" parent="WellbeingWidgets"]

[node name="NPCHealthBar" type="Node2D" parent="WellbeingWidgets/WellbeingWidget"]
position = Vector2(0, -5)

[node name="Background" type="Sprite2D" parent="WellbeingWidgets/WellbeingWidget/NPCHealthBar"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
scale = Vector2(0.62, 0.08)
texture = ExtResource("5_1vwdi")

[node name="DelayBar" type="Sprite2D" parent="WellbeingWidgets/WellbeingWidget/NPCHealthBar"]
self_modulate = Color(0.556863, 0.556863, 0.556863, 1)
position = Vector2(-29, 0)
scale = Vector2(0.58, 0.04)
texture = ExtResource("5_1vwdi")
offset = Vector2(50, 0)

[node name="Health" type="Sprite2D" parent="WellbeingWidgets/WellbeingWidget/NPCHealthBar"]
self_modulate = Color(0.662745, 0.105882, 0.105882, 1)
position = Vector2(-29, 0)
scale = Vector2(0.58, 0.04)
texture = ExtResource("5_1vwdi")
offset = Vector2(50, 0)

[node name="NPCStabilityBar" type="Node2D" parent="WellbeingWidgets/WellbeingWidget"]
position = Vector2(0, 5)

[node name="Background" type="Polygon2D" parent="WellbeingWidgets/WellbeingWidget/NPCStabilityBar"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
polygon = PackedVector2Array(-28, -4, 28, -4, 36, 0, 28, 4, -28, 4, -36, 0)

[node name="Stability" type="Polygon2D" parent="WellbeingWidgets/WellbeingWidget/NPCStabilityBar"]
self_modulate = Color(0.854902, 0.721569, 0, 1)
polygon = PackedVector2Array(-31, 0, -27, -2, 28, -2, 32, 0, 28, 2, -27, 2)

[node name="Middle" type="Polygon2D" parent="WellbeingWidgets/WellbeingWidget/NPCStabilityBar"]
polygon = PackedVector2Array(-1, -3, 1, -3, 1, 3, -1, 3)
